fixed books overflow on profile page

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,3 +1,4 @@
+
 /*********************
 HEADER
 ***************************/
@@ -5,6 +6,7 @@ HEADER
 	margin: 0;
 	padding: 0;
 	font-family: 'Raleway', "Arial", sans-serif;
+
 }
 
 .group:after {
@@ -33,6 +35,7 @@ header {
   padding-bottom: 17px;
   margin: 18px 0;
   border-bottom: 1px solid #eeeeee;
+  overflow: auto;
 }
 
 .page-header h1 , p {
@@ -70,7 +73,7 @@ CONTENT
 ********************/
 .yield {
 	margin: 0 auto;
-	width: 800px
+	width: 800px;
 }
 .bottn {
 	border-radius: 5px;
@@ -83,11 +86,7 @@ CONTENT
 	width: 1000px;
 	margin: 0 auto;
 }
-.img-circle {
-	width: 50px;
-	height: 50px;
-	border-radius: 30px; 
-}
+
 .row {
   margin-left: -20px;
   *zoom: 1;
@@ -171,9 +170,11 @@ SHOW BOOK
 ***********************/
 
 .img-circle {
-	width: 30px;
-	height: 30px;
+	width: 60px;
+	height: 60px;
 	border-radius: 5px; 
+	float: left;
+	margin-right: 10px;
 }
 .cover {
 	margin: 30px 30px 0 0;
